<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/tvItemStyle"
            android:text="拍照"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/takephoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/describe"
                android:textSize="20sp" />


            <Button
                android:id="@+id/Camerabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Camerahit"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/imageshowlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/finsh" />

            <Button
                android:id="@+id/agin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/agin" />

            <ImageView
                android:id="@+id/photoshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/agin"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nothing"
                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/editname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photoshow"
                android:hint="@string/imagename" />

            <Button
                android:id="@+id/savebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editname"
                android:text="@string/save" />

            <Button
                android:id="@+id/copyPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editname"
                android:layout_toRightOf="@id/savebtn"
                android:text="保存原图" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>